fixes #297 #262 changed z-index of cart tag from 9999 to 10.

--- a/Tinville/static/css/main.css
+++ b/Tinville/static/css/main.css
@@ -1197,7 +1197,7 @@ textarea
 .cartCount
 {
     width            : 14px;
-    z-index          : 990;
+    z-index          : 11;
     top              : -7px;
     right            : 9px;
     background-color : darkred;
@@ -1216,7 +1216,7 @@ textarea
 {
     width           : 30px;
     height          : 30px;
-    z-index         : 9999;
+    z-index         : 10;
     float           : right;
     position        : relative;
     top             : 17px;
